--- a/index.html
+++ b/index.html
@@ -16189,7 +16189,7 @@ var _user$project$Main$view = function (model) {
 									_0: {ctor: '_Tuple2', _0: 'font-family', _1: 'monospace'},
 									_1: {
 										ctor: '::',
-										_0: {ctor: '_Tuple2', _0: 'font-size', _1: '60px'},
+										_0: {ctor: '_Tuple2', _0: 'font-size', _1: '40px'},
 										_1: {
 											ctor: '::',
 											_0: {ctor: '_Tuple2', _0: 'color', _1: 'white'},
@@ -16261,7 +16261,10 @@ var _user$project$Main$view = function (model) {
 							_0: {
 								ctor: '_Tuple2',
 								_0: _mdgriffith$elm_style_animation$Animation$render(model.style),
-								_1: 'Correct Time: %l:%M'
+								_1: A2(
+									_elm_lang$core$Basics_ops['++'],
+									_user$project$Main$locationName(model.ip),
+									' Time: %l:%M')
 							},
 							_1: {
 								ctor: '::',
@@ -16277,15 +16280,7 @@ var _user$project$Main$view = function (model) {
 										_0: {ctor: '[]'},
 										_1: '%B %e%t %Y'
 									},
-									_1: {
-										ctor: '::',
-										_0: {
-											ctor: '_Tuple2',
-											_0: {ctor: '[]'},
-											_1: _user$project$Main$locationName(model.ip)
-										},
-										_1: {ctor: '[]'}
-									}
+									_1: {ctor: '[]'}
 								}
 							}
 						})),
