--- a/index.html
+++ b/index.html
@@ -15932,49 +15932,65 @@ var _mgold$elm_date_format$Date_Format$format = F2(
 		return A3(_mgold$elm_date_format$Date_Format$localFormat, _mgold$elm_date_format$Date_Local$international, s, d);
 	});
 var _mgold$elm_date_format$Date_Format$formatISO8601 = _mgold$elm_date_format$Date_Format$format('%Y-%m-%dT%H:%M:%SZ');
-var _user$project$Main$rootDiv = F2(
-	function (model, content) {
-		return A2(
-			_elm_lang$html$Html$div,
-			{
+var _user$project$Main$maybeMore = F2(
+	function (b, x) {
+		return b ? {
+			ctor: '::',
+			_0: _elm_lang$html$Html$text(' '),
+			_1: {
 				ctor: '::',
-				_0: _elm_lang$html$Html_Attributes$style(
-					{
+				_0: x,
+				_1: {ctor: '[]'}
+			}
+		} : {ctor: '[]'};
+	});
+var _user$project$Main$rootDiv = function (content) {
+	return A2(
+		_elm_lang$html$Html$div,
+		{
+			ctor: '::',
+			_0: _elm_lang$html$Html_Attributes$style(
+				{
+					ctor: '::',
+					_0: {ctor: '_Tuple2', _0: 'width', _1: '1920px'},
+					_1: {
 						ctor: '::',
-						_0: {ctor: '_Tuple2', _0: 'width', _1: '1920px'},
+						_0: {ctor: '_Tuple2', _0: 'height', _1: '1080px'},
 						_1: {
 							ctor: '::',
-							_0: {ctor: '_Tuple2', _0: 'height', _1: '1080px'},
+							_0: {ctor: '_Tuple2', _0: 'background-color', _1: 'white'},
 							_1: {
 								ctor: '::',
-								_0: {ctor: '_Tuple2', _0: 'background-color', _1: 'white'},
+								_0: {ctor: '_Tuple2', _0: 'color', _1: 'orange'},
 								_1: {
 									ctor: '::',
-									_0: {ctor: '_Tuple2', _0: 'color', _1: 'orange'},
-									_1: {ctor: '[]'}
+									_0: {ctor: '_Tuple2', _0: 'font-size', _1: '40px'},
+									_1: {
+										ctor: '::',
+										_0: {ctor: '_Tuple2', _0: 'font-family', _1: 'monospace'},
+										_1: {ctor: '[]'}
+									}
 								}
 							}
 						}
-					}),
-				_1: {ctor: '[]'}
-			},
-			content);
-	});
+					}
+				}),
+			_1: {ctor: '[]'}
+		},
+		content);
+};
 var _user$project$Main$update = F2(
 	function (action, model) {
 		var _p0 = action;
-		if (_p0.ctor === 'NewLocation') {
-			return {ctor: '_Tuple2', _0: model, _1: _elm_lang$core$Platform_Cmd$none};
-		} else {
-			return {
-				ctor: '_Tuple2',
-				_0: _elm_lang$core$Native_Utils.update(
-					model,
-					{size: _p0._0}),
-				_1: _elm_lang$core$Platform_Cmd$none
-			};
-		}
+		return {ctor: '_Tuple2', _0: model, _1: _elm_lang$core$Platform_Cmd$none};
 	});
+var _user$project$Main$init = function (location) {
+	return {
+		ctor: '_Tuple2',
+		_0: {ip: location.host},
+		_1: _elm_lang$core$Platform_Cmd$none
+	};
+};
 var _user$project$Main$allLocations = _elm_lang$core$Dict$fromList(
 	{
 		ctor: '::',
@@ -16001,7 +16017,18 @@ var _user$project$Main$locationName = function (ip) {
 		return _p1._0;
 	}
 };
-var _user$project$Main$vncPage = F2(
+var _user$project$Main$nameLine = function (model) {
+	return A2(
+		_elm_lang$html$Html$div,
+		{ctor: '[]'},
+		{
+			ctor: '::',
+			_0: _elm_lang$html$Html$text(
+				_user$project$Main$locationName(model.ip)),
+			_1: {ctor: '[]'}
+		});
+};
+var _user$project$Main$vncUrl = F2(
 	function (p, ip) {
 		return A2(
 			_elm_lang$core$Basics_ops['++'],
@@ -16017,7 +16044,23 @@ var _user$project$Main$vncPage = F2(
 						_elm_lang$core$Basics$toString(p.portDigit),
 						'&reconnect=1&reconnect_delay=5000'))));
 	});
-var _user$project$Main$projectPage = F2(
+var _user$project$Main$vncLink = F2(
+	function (project, model) {
+		return A2(
+			_elm_lang$html$Html$a,
+			{
+				ctor: '::',
+				_0: _elm_lang$html$Html_Attributes$href(
+					A2(_user$project$Main$vncUrl, project, model.ip)),
+				_1: {ctor: '[]'}
+			},
+			{
+				ctor: '::',
+				_0: _elm_lang$html$Html$text(project.name),
+				_1: {ctor: '[]'}
+			});
+	});
+var _user$project$Main$webServerUrl = F2(
 	function (p, ip) {
 		return A2(
 			_elm_lang$core$Basics_ops['++'],
@@ -16032,6 +16075,22 @@ var _user$project$Main$projectPage = F2(
 						_elm_lang$core$Basics_ops['++'],
 						_elm_lang$core$Basics$toString(p.portDigit),
 						'/status/about'))));
+	});
+var _user$project$Main$webServerLink = F2(
+	function (project, model) {
+		return A2(
+			_elm_lang$html$Html$a,
+			{
+				ctor: '::',
+				_0: _elm_lang$html$Html_Attributes$href(
+					A2(_user$project$Main$webServerUrl, project, model.ip)),
+				_1: {ctor: '[]'}
+			},
+			{
+				ctor: '::',
+				_0: _elm_lang$html$Html$text('(built-in web server)'),
+				_1: {ctor: '[]'}
+			});
 	});
 var _user$project$Main$projects = {
 	ctor: '::',
@@ -16055,93 +16114,37 @@ var _user$project$Main$projects = {
 	}
 };
 var _user$project$Main$view = function (model) {
-	return A2(
-		_user$project$Main$rootDiv,
-		model,
-		{
-			ctor: '::',
-			_0: A2(
-				_elm_lang$html$Html$div,
-				{
-					ctor: '::',
-					_0: _elm_lang$html$Html_Attributes$style(
-						{
-							ctor: '::',
-							_0: {ctor: '_Tuple2', _0: 'font-size', _1: '40px'},
-							_1: {ctor: '[]'}
-						}),
-					_1: {ctor: '[]'}
-				},
-				A2(
-					_elm_lang$core$Basics_ops['++'],
-					{
-						ctor: '::',
-						_0: A2(
-							_elm_lang$html$Html$div,
-							{ctor: '[]'},
+	return _user$project$Main$rootDiv(
+		A2(
+			_elm_lang$core$Basics_ops['++'],
+			{
+				ctor: '::',
+				_0: _user$project$Main$nameLine(model),
+				_1: {ctor: '[]'}
+			},
+			A2(
+				_elm_lang$core$List$map,
+				function (project) {
+					return A2(
+						_elm_lang$html$Html$div,
+						{ctor: '[]'},
+						A2(
+							_elm_lang$core$Basics_ops['++'],
 							{
 								ctor: '::',
-								_0: _elm_lang$html$Html$text(
-									_user$project$Main$locationName(model.ip)),
+								_0: A2(_user$project$Main$vncLink, project, model),
 								_1: {ctor: '[]'}
-							}),
-						_1: {ctor: '[]'}
-					},
-					A2(
-						_elm_lang$core$List$map,
-						function (project) {
-							return A2(
-								_elm_lang$html$Html$div,
-								{ctor: '[]'},
-								A2(
-									_elm_lang$core$Basics_ops['++'],
-									{
-										ctor: '::',
-										_0: A2(
-											_elm_lang$html$Html$a,
-											{
-												ctor: '::',
-												_0: _elm_lang$html$Html_Attributes$href(
-													A2(_user$project$Main$vncPage, project, model.ip)),
-												_1: {ctor: '[]'}
-											},
-											{
-												ctor: '::',
-												_0: _elm_lang$html$Html$text(project.name),
-												_1: {ctor: '[]'}
-											}),
-										_1: {ctor: '[]'}
-									},
-									project.page ? {
-										ctor: '::',
-										_0: _elm_lang$html$Html$text(' '),
-										_1: {
-											ctor: '::',
-											_0: A2(
-												_elm_lang$html$Html$a,
-												{
-													ctor: '::',
-													_0: _elm_lang$html$Html_Attributes$href(
-														A2(_user$project$Main$projectPage, project, model.ip)),
-													_1: {ctor: '[]'}
-												},
-												{
-													ctor: '::',
-													_0: _elm_lang$html$Html$text('(built-in web server)'),
-													_1: {ctor: '[]'}
-												}),
-											_1: {ctor: '[]'}
-										}
-									} : {ctor: '[]'}));
-						},
-						_user$project$Main$projects))),
-			_1: {ctor: '[]'}
-		});
+							},
+							A2(
+								_user$project$Main$maybeMore,
+								project.page,
+								A2(_user$project$Main$webServerLink, project, model))));
+				},
+				_user$project$Main$projects)));
 };
-var _user$project$Main$Model = F2(
-	function (a, b) {
-		return {size: a, ip: b};
-	});
+var _user$project$Main$Model = function (a) {
+	return {ip: a};
+};
 var _user$project$Main$Project = F3(
 	function (a, b, c) {
 		return {name: a, portDigit: b, page: c};
@@ -16153,31 +16156,17 @@ var _user$project$Main$Location = F2(
 var _user$project$Main$NewLocation = function (a) {
 	return {ctor: 'NewLocation', _0: a};
 };
-var _user$project$Main$Size = function (a) {
-	return {ctor: 'Size', _0: a};
-};
-var _user$project$Main$init = function (location) {
-	return {
-		ctor: '_Tuple2',
-		_0: {
-			size: {width: 0, height: 0},
-			ip: location.host
-		},
-		_1: A2(_elm_lang$core$Task$perform, _user$project$Main$Size, _elm_lang$window$Window$size)
-	};
-};
-var _user$project$Main$subscriptions = function (model) {
-	return _elm_lang$core$Platform_Sub$batch(
-		{
-			ctor: '::',
-			_0: _elm_lang$window$Window$resizes(_user$project$Main$Size),
-			_1: {ctor: '[]'}
-		});
-};
 var _user$project$Main$main = A2(
 	_elm_lang$navigation$Navigation$program,
 	_user$project$Main$NewLocation,
-	{init: _user$project$Main$init, view: _user$project$Main$view, update: _user$project$Main$update, subscriptions: _user$project$Main$subscriptions})();
+	{
+		init: _user$project$Main$init,
+		view: _user$project$Main$view,
+		update: _user$project$Main$update,
+		subscriptions: function (_p2) {
+			return _elm_lang$core$Platform_Sub$none;
+		}
+	})();
 var Elm = {};
 Elm['Main'] = Elm['Main'] || {};
 if (typeof _user$project$Main$main !== 'undefined') {
